--- a/style1.css
+++ b/style1.css
@@ -64,7 +64,7 @@
 
 .icontainer-body
 {
-    display:flex;
+    display: flex;
     padding-top: 100px;
     width: auto;
 }
@@ -78,9 +78,10 @@
     background-color: rgb(243, 248, 250);
     padding: 15px;
     border-radius: 0.7rem;
-    position:relative;
+  
     margin:0 auto;
-    z-index: -1;
+    
+    margin-bottom: 250px;
     
 }
 table.bill{
@@ -93,7 +94,7 @@ table.bill{
 }.btn-proceed
 {
     width: 150px;
-    position: relative;
+    display: inline-block;
     height: 30px;
     font-size: 15px;
     font-weight: bold;
@@ -103,7 +104,7 @@ table.bill{
     box-shadow: 2px 2px 20px 0px rgba(0, 0, 0, .1);
     border: none;
     border-radius: 10px;
-    z-index: -1;
+    
     
     
 }
@@ -250,7 +251,7 @@ table.bill{
     margin-left:  auto;
     margin-right: auto;
     margin-top: 60px;
-   margin-bottom: 200px;
+    margin-bottom: 200px;
     width: 30vw;
     height: 60px;
     font-size: 30px;
@@ -308,6 +309,7 @@ table.bill{
   padding: 15px;
   border-radius: 0.7rem;
   margin:0 auto;
+  margin-bottom: 250px;
 }
 .tablist{
   padding:5px;
